<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndWords</string>
	<string name="show_wrong_answers">Show Wrong Answers</string>
	<string name="show_wrong_answers_title">Show Wrong Answers</string>  
	<string name="space_changes_direction">Spacebar changes direction</string>  
	<string name="navigation_pref_category">Grid Navigation Settings</string>
	<string name="enter_changes_direction">Enter key changes direction</string>
	<string name="clue_pref_category">Clues</string>
	<string name="show_both_clues">Show both clues</string>
	<string name="show_clue_length">Show clue length</string>
	<string name="skip_existing_letters">Skip existing letters</string>
	<string name="do_in_ink">Ink Mode</string>
	<string name="time_puzzle">Time puzzle</string>
	<string name="screen_orientation">Screen Orientation</string>
	<string name="screen_orientation_summary"></string>
	<string name="screen_orientation_title">Screen Orientation</string>
	<string name="screen_orientation_default_value">Default</string>
	<string name="clue_font_size">Clue Font Size</string>
	<string name="load_custom_title">Load Custom URL</string>
	<string name="load_custom_message">Enter URL</string>
	<string name="load_custom_ok">OK</string>
	<string name="load_custom_cancel">Cancel</string>
	<string name="puzzle_finished_ok">OK</string>
	<string name="puzzle_finished_title">Puzzle Complete</string>
	<string name="puzzle_finished_in">in</string>
	<string name="puzzle_finished_min">min</string>
	<string name="puzzle_finished_sec">sec</string>
	<string name="puzzle_finished_message">You have successfully completed this crossword puzzle</string>
	<string name="google_search">Google on long click</string>
	<string name="showpuzzleinfo">Show puzzle info on load</string>
	<string name="end_of_word">End of Word</string>
	<string name="end_of_word_summary"></string>
	<string name="end_of_word_title">End of Word</string>
	<string name="load">Load</string>
	<string name="preferences">Prefs</string>
	<string name="reveal">Reveal</string>
	<string name="check">Check</string>
	<string name="info">Info</string>
	<string name="help">Help</string>
	<string name="exit">Exit</string>
	<string name="volume_rocker">Volume Rocker Advances</string>
	<string name="last_load_check">Last Load Check</string>
	<string name="donate">Donate</string>
	<string name="downloading_puzzles">Puzzle Downloads</string>
	<string name="download_puzzles">Download puzzles</string>
	<string name="download_puzzles_title">Download all puzzles</string>
	<string name="delete_older_than_2_weeks">Delete completed puzzles older than 2 weeks</string>
	<string name="delete_older_than_2_weeks_title">Delete old puzzles</string>
	<string name="fit_puzzle_to_screen">Size puzzle to fit screen</string>
	<string name="enable_NYT_Daily">Enable NYT Daily (requires subscription)</string>
	<string name="NYT_Username">NYT Username</string>
	<string name="NYT_Password">NYT Password</string>
	<string name="screen_theme">Display Color Theme</string>
	<string name="screen_theme_summary">App Color Theme</string>
	<string name="screen_theme_title">App Color Theme</string>
	<string name="screen_theme_default_value">0</string>
	<string-array name="screen_theme_array"><item>Light</item><item>Dark</item></string-array>
	<string-array name="screen_theme_values"><item>0</item><item>1</item></string-array>
	<string-array name="screen_orientation_array"><item>Default</item><item>Landscape</item><item>Portrait</item></string-array>
	<string-array name="screen_orientation_values"><item>0</item><item>1</item><item>2</item></string-array>
	<string-array name="reveal_values"><item>Letter</item><item>Word</item><item>Solution</item></string-array>
	<string-array name="end_of_word_array"><item>Stop</item><item>Advance to next word</item></string-array>
	<string-array name="end_of_word_values"><item>Stop</item><item>Advance to next word</item></string-array>
	<string-array name="clue_font_sizes"><item>Small</item><item>Medium</item><item>Large</item><item>Extra Large</item></string-array>
	<string-array name="clue_font_sizes_values"><item>15.0</item><item>30.0</item><item>45.0</item><item>60.0</item></string-array>
	<string-array name="volume_rocker_entries"><item>Letter</item><item>Word</item></string-array>
	<string-array name="volume_rocker_values"><item>Letter</item><item>Word</item></string-array>
	<string name="app_license">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAhV4mo9qM3/IcJgxWNCwlc/KkSJSXBXf+o12PgsuTwewTBlhrCb3DSMqcMJQQCivOvvKKI6FM7moV/YvnrCtZDdBOZ/EpsextJbReFA1wXn5IfdpabPFMnkEvKcOE+mWUSdM2cEnycBP1Jx8e9hjYkoILWZdHP1ej94SxOPFzV5I1qosS9xTz9/ZVKQksK1KhDevCFJ23c7guNwfI4MSrR+Jn+Gttsn5ObVeeaL9qAC9gs9BtVTRZHwRCEJIL/rdMX1Gd5idkrlG2h9qcDoaQ49gOgTKzPG+Z25ika8pAi8XHUk6/Tblm0yKYCVj8p9NK+Cwiy3JCTkzXttmfZdVp6QIDAQAB</string>
</resources>