<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/load" android:icon="@drawable/load" android:title="@string/load" android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/preferences" android:icon="@drawable/preferences" android:title="@string/preferences" android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/reveal" android:icon="@drawable/reveal" android:title="@string/reveal" android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/check" android:icon="@drawable/check" android:title="@string/check" android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/info" android:icon="@drawable/info" android:title="@string/info" android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/help" android:icon="@drawable/help" android:title="@string/help" android:showAsAction="ifRoom|withText" />   
    <item android:id="@+id/exit" android:icon="@drawable/exit" android:title="@string/exit" android:showAsAction="ifRoom|withText" />
</menu>
